--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Influencer Products</title>
+    <!-- Link Icon -->
+    <link rel="shortcut icon" href="images/icons.png" type="image/x-icon">
+    <!-- Link StyleSheet -->
+    <link rel="stylesheet" href="stylle.css">
+    <!-- Link FontAwesome -->
+    <script src="https://kit.fontawesome.com/05db13f6d2.js" crossorigin="anonymous"></script>
+    <!-- Link GoogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Poppins&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-
+    <header>
+        <h1>Influencer Products</h1>
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log in</a></li>
+                <i class="fas fa-search"></i>
+                <i class="fas fa-shopping-cart"></i>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
