--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 </head>
 
 <body>
+    <!-- Header Area -->
     <header>
-        <h1>Influencer Products</h1>
-        <nav>
+        <h2>Influencer Products</h2>
+        <nav class="list-item">
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Products</a></li>
@@ -32,6 +33,192 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <!-- Top introduction-area start -->
+        <section class="introduction-area">
+            <nav class="header-intro intro">
+                <h1>Start your Journey as </h1>
+                <h1>Influencer</h1>
+                <p>Are you an aspiring influencer who is adamant about starting their influencer journey in 2022? Have
+                    you made up your mind to deal with the hardships of career.</p>
+                <button>Prebook Now <i class="fas fa-arrow-right"></i> </button>
+            </nav>
+            <nav class="header-image intro">
+                <img src="images/main-camera.png" alt="">
+            </nav>
+        </section>
+        <hr>
+
+        <!-- collection-container area start -->
+
+        <section class="top-collection-container">
+            <h1>Popular Collection</h1>
+            <nav class="collection-container">
+                <nav class="collections">
+                    <img src="images/tripod.png" alt="" class="collection-img">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/mic.png" alt="" class="collection-img">
+                    <h2>Microphone</h2>
+                    <h3>$120.25</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/airpod.png" alt="" class="collection-img">
+                    <h2>Airbuds</h2>
+                    <h3>$100.00</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/drone.png" alt="" class="collection-img">
+                    <h2>Drone</h2>
+                    <h3>$980.25</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/lights.png" alt="" class="collection-img">
+                    <h2>Lights Setup</h2>
+                    <h3>$1200.00</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/setup.png" alt="" class="collection-img">
+                    <h2>Photoshot set</h2>
+                    <h3>$820.40</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/camera.png" alt="" class="collection-img">
+                    <h2>Vlogging Camera</h2>
+                    <h3>$1800.80</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/single-light.png" alt="" class="collection-img">
+                    <h2>Green Screen</h2>
+                    <h3>$25.48</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+                <nav class="collections">
+                    <img src="images/action.png" alt="" class="collection-img">
+                    <h2>Action Camera</h2>
+                    <h3>$380.00</h3>
+                    <nav class="collection-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <p>5.00</p>
+                    </nav>
+                    <nav class="collection-info">
+                        <p>Wordwide shifting</p>
+                        <P>available</P>
+                        <p>Buyers protection possible!</p>
+                    </nav>
+                </nav>
+            </nav>
+        </section>
+    </main>
 </body>
 
 </html>
