--- a/index.html
+++ b/index.html
@@ -47,17 +47,16 @@
                 <img src="images/main-camera.png" alt="">
             </nav>
         </section>
-        <hr>
 
         <!-- collection-container area start -->
 
         <section class="top-collection-container">
-            <h1>Popular Collection</h1>
+            <h1 class=""> Popular Collection</h1>
             <nav class="collection-container">
                 <nav class="collections">
                     <img src="images/tripod.png" alt="" class="collection-img">
-                    <h2>Flex Tripod</h2>
-                    <h3>$50.48</h3>
+                    <h2 class="collection-title">Flex Tripod</h2>
+                    <h3 class="collection-price">$50.48</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -74,8 +73,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/mic.png" alt="" class="collection-img">
-                    <h2>Microphone</h2>
-                    <h3>$120.25</h3>
+                    <h2 class="collection-title">Microphone</h2>
+                    <h3 class="collection-price">$120.25</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -92,8 +91,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/airpod.png" alt="" class="collection-img">
-                    <h2>Airbuds</h2>
-                    <h3>$100.00</h3>
+                    <h2 class="collection-title">Airbuds</h2>
+                    <h3 class="collection-price">$100.00</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -110,8 +109,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/drone.png" alt="" class="collection-img">
-                    <h2>Drone</h2>
-                    <h3>$980.25</h3>
+                    <h2 class="collection-title">Drone</h2>
+                    <h3 class="collection-price">$980.25</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -128,8 +127,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/lights.png" alt="" class="collection-img">
-                    <h2>Lights Setup</h2>
-                    <h3>$1200.00</h3>
+                    <h2 class="collection-title">Lights Setup</h2>
+                    <h3 class="collection-price">$1200.00</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -146,8 +145,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/setup.png" alt="" class="collection-img">
-                    <h2>Photoshot set</h2>
-                    <h3>$820.40</h3>
+                    <h2 class="collection-title">Photoshot set</h2>
+                    <h3 class="collection-price">$820.40</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -164,8 +163,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/camera.png" alt="" class="collection-img">
-                    <h2>Vlogging Camera</h2>
-                    <h3>$1800.80</h3>
+                    <h2 class="collection-title">Vlogging Camera</h2>
+                    <h3 class="collection-price">$1800.80</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -182,8 +181,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/single-light.png" alt="" class="collection-img">
-                    <h2>Green Screen</h2>
-                    <h3>$25.48</h3>
+                    <h2 class="collection-title">Green Screen</h2>
+                    <h3 class="collection-price">$25.48</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -200,8 +199,8 @@
                 </nav>
                 <nav class="collections">
                     <img src="images/action.png" alt="" class="collection-img">
-                    <h2>Action Camera</h2>
-                    <h3>$380.00</h3>
+                    <h2 class="collection-title">Action Camera</h2>
+                    <h3 class="collection-price">$380.00</h3>
                     <nav class="collection-rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -217,8 +216,34 @@
                     </nav>
                 </nav>
             </nav>
+            <h3 style="text-align: right;margin-right: 200px;margin-top: 60px;color: #E02C6D">See More<i
+                    aria-hidden="true" class="fas fa-arrow-right" style="margin-left: 10px;font-weight: 600"></i></h3>
+        </section>
+
+        <!-- featured area start -->
+
+        <section class="featured">
+            <nav class="featured-img flexible">
+                <img src="images/gear.png" alt="">
+            </nav>
+            <nav class="featured-content flexible">
+                <h2 style="color: #0A0826">Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit mollit.
+                    Exercitation veniam consequat sunt nostrud amet.</p>
+                <button>Join Now <i class="fas fa-arrow-right"></i> </button>
+            </nav>
         </section>
     </main>
+    <footer>
+        <h2>Influencer products</h2>
+        <p>Copyright &copy; 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-youtube"></i>
+    </footer>
 </body>
 
 </html>
